# SimpleTCPProxyCPP

./: CMakeLists.txt  main.cpp
proxyfier/: ProxyConsumer.cpp  ProxyConsumer.h  Proxyfier.cpp  Proxyfier.h
server/: Server.cpp  Server.h  ServerClient.cpp  ServerClient.h
